fix: header button position issues and body height issue on Firefox

--- a/client/stylesheets/main.sass
+++ b/client/stylesheets/main.sass
@@ -18,7 +18,7 @@ $desktop: "only screen and (min-width : 1200px)";
 html,
 body
 	width: 100%
-	height: 100%
+	min-height: 100%
 	font-family: 'Source Sans Pro', sans-serif
 	color: $text
 	background: #F4F9FF
@@ -32,6 +32,7 @@ body
 	width: 100%
 	height: 100%
 	min-height: 100vh
+	padding: 1em 0
 
 div
 	width: 100%
@@ -118,6 +119,7 @@ h
     transform: rotate(360deg)
 
 header
+	position: relative
 	background: white
 	width: 100%
 	padding: 1em 0
